--- a/package.json
+++ b/package.json
@@ -17,18 +17,25 @@
     "test": "jest",
     "lint": "tsc --noEmit && eslint ./src/**/* --ext .ts,.tsx",
     "lint:fix": "eslint --fix ./src/**/* --ext .ts,.tsx",
-    "docker:build": "webpack --config ./webpack/docker.config.js"
+    "docker:build": "webpack --config ./webpack/docker.config.js",
+    "server": "ts-node --project tsconfig.server.json src/server/index.ts",
+    "server:dev": "nodemon --watch src/server --ext ts --exec ts-node --project tsconfig.server.json src/server/index.ts",
+    "server:build": "tsc --project tsconfig.server.json"
   },
   "devDependencies": {
     "@isoflow/isopacks": "^0.0.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/body-parser": "^1.19.6",
     "@types/chroma-js": "^2.4.0",
+    "@types/cors": "^2.8.19",
     "@types/dom-to-image": "^2.6.5",
+    "@types/express": "^4.17.23",
     "@types/file-saver": "^2.0.5",
     "@types/jest": "^27.5.2",
     "@types/jsdom": "^21.1.0",
+    "@types/node": "^24.5.1",
     "@types/pathfinding": "^0.0.6",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.0.11",
@@ -50,7 +57,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jsdom": "^21.1.1",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.1.10",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -58,6 +65,7 @@
     "style-loader": "^3.3.3",
     "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.7",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.1.6",
@@ -74,8 +82,11 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "auto-bind": "^5.0.1",
+    "body-parser": "^2.2.0",
     "chroma-js": "^2.4.2",
+    "cors": "^2.8.5",
     "dom-to-image": "^2.6.0",
+    "express": "^5.1.0",
     "file-saver": "^2.0.5",
     "gsap": "^3.11.4",
     "immer": "^10.0.2",
