CUSTOMアイコンのサーバーとの同期機能を実装

--- a/package.json
+++ b/package.json
@@ -81,8 +81,11 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
+    "@types/chokidar": "^1.7.5",
+    "@types/ws": "^8.18.1",
     "auto-bind": "^5.0.1",
     "body-parser": "^2.2.0",
+    "chokidar": "^4.0.3",
     "chroma-js": "^2.4.2",
     "cors": "^2.8.5",
     "dom-to-image": "^2.6.0",
@@ -97,6 +100,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.1",
     "uuid": "^9.0.0",
+    "ws": "^8.18.3",
     "zod": "3.22.2",
     "zustand": "^4.3.3"
   },
