SSH経由のpublish機能を実装

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "@types/chokidar": "^1.7.5",
+    "@types/ssh2": "^1.15.5",
     "@types/ws": "^8.18.1",
     "auto-bind": "^5.0.1",
     "body-parser": "^2.2.0",
@@ -89,6 +90,7 @@
     "chroma-js": "^2.4.2",
     "cors": "^2.8.5",
     "dom-to-image": "^2.6.0",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "file-saver": "^2.0.5",
     "gsap": "^3.11.4",
@@ -99,6 +101,7 @@
     "react-hook-form": "^7.43.2",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.1",
+    "ssh2": "^1.17.0",
     "uuid": "^9.0.0",
     "ws": "^8.18.3",
     "zod": "3.22.2",
