FREEPIK連携の試作

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.9.36",
     "@types/body-parser": "^1.19.6",
     "@types/chroma-js": "^2.4.0",
     "@types/cors": "^2.8.19",
@@ -85,6 +86,7 @@
     "@types/ssh2": "^1.15.5",
     "@types/ws": "^8.18.1",
     "auto-bind": "^5.0.1",
+    "axios": "^1.12.2",
     "body-parser": "^2.2.0",
     "chokidar": "^4.0.3",
     "chroma-js": "^2.4.2",
