--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "webpack serve --config ./webpack/dev.config.js",
     "dev": "nodemon --watch ./src/ -e ts,tsx --exec npm run build",
     "build": "webpack --config ./webpack/prod.config.js && tsc --declaration --emitDeclarationOnly && tsc-alias",
+    "build:app": "webpack --config ./webpack/app.config.js",
     "test": "jest",
     "lint": "tsc --noEmit && eslint ./src/**/* --ext .ts,.tsx",
     "lint:fix": "eslint --fix ./src/**/* --ext .ts,.tsx",
@@ -21,7 +22,8 @@
     "server": "ts-node --project tsconfig.server.json src/server/index.ts",
     "server:dev": "nodemon --watch src/server --ext ts --exec ts-node --project tsconfig.server.json src/server/index.ts",
     "server:build": "tsc --project tsconfig.server.json",
-    "all-in-one": "API_URL=/api concurrently --kill-others --names \"client,server\" -c \"blue,green\" \"yarn start\" \"yarn server:dev\""
+    "all-in-one:dev": "ts-node --project tsconfig.server.json src/server/allInOne.ts",
+    "all-in-one": "ts-node --project tsconfig.server.json src/server/allInOneProduction.ts"
   },
   "devDependencies": {
     "@isoflow/isopacks": "^0.0.10",
